--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -412,8 +412,9 @@ list(APPEND libopenmc_SOURCES
   src/tallies/filter_legendre.cpp
   src/tallies/filter_material.cpp
   src/tallies/filter_materialfrom.cpp
-  src/tallies/filter_mesh.cpp
   src/tallies/filter_adjointmesh.cpp
+  src/tallies/filter_mesh.cpp
+  src/tallies/filter_meshchar.cpp
   src/tallies/filter_meshsurface.cpp
   src/tallies/filter_mu.cpp
   src/tallies/filter_particle.cpp
